--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,185 @@
-:root{
+:root {
     --primary-color: #0a1118;
     --primary-color-highight: #233D54;
-    --bs-body-bg: #8b7682;   
+    --bs-body-bg: #88909a;
+    --bs-light: #c1c0c0;
     --bs-body-font-family: 'Montserrat', san-serif;
 }
 
-a{
+html{
+    scroll-behavior: smooth;
+}
+
+a {
     color: var(--primary-color);
 }
-a:hover{
+
+a:hover {
     color: var(--primary-color);
 }
+
+/* custom container*/
+.container-custom {
+    width: 100%;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
+
 /* Main  header*/
-.header{
+.header {
     z-index: 2;
 }
 
 /* Flyout Navigation bar*/
-#navbar{
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgb(208, 176, 168, 0.6);
-  z-index: 4;
+#navbar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgb(208, 176, 168, 0.6);
+    z-index: 4;
 }
 
-.dropdown-nav_closeNavBtn{
+.dropdown-nav_closeNavBtn {
     position: absolute;
     top: 20px;
     right: 16px;
-    background-color: rgbA(255, 255,255, 0.4);
-    
+    background-color: rgbA(255, 255, 255, 0.4);
+
 }
 
-.dropdown-nav_continer{
+.dropdown-nav_continer {
     height: 100vh;
     padding: 0 1rem;
 }
 
+/* Hero sction */
+.hero {
+    position: relative;
+    height: 100vh;
+    background-color: var(--primary-color);
+    overflow: hidden;
+}
+
+.hero_heading {}
+
+.hero_video {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translateX(-50%) translateY(-41%);
+    z-index: ;
+}
+
+.hero_overlay {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0;
+    bottom: 0%;
+    background-color: var(--primary-color);
+    opacity: 0.5;
+    z-index: 1;
+}
+
+.hero_content {
+    z-index: 1;
+}
+
+.hero_content-width {
+    max-width: 540px;
+}
+
+.hero_scroll-btn {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+    z-index: 1;
+    color: var(--bs-light);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+
+}
+
+.hero_scroll-btn:hover {
+    color: rgb(215, 200, 200);
+    opacity: 0.9;
+}
+
+.hero_scroll-btn .bi {
+    padding: 0 12px;
+    transition-delay: 0.8s;
+    animation: bounce 1s infinite alternate;
+}
+
+@keyframes bounce {
+    from {
+        transform: translateY(0px);
+    }
+
+    to {
+        transform: translateY(-10px);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+/*  X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .container-custom {
+        max-width: 1140px;
+
+    }
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+    .hero_heading {
+        h1 {
+            font-size: 3.2rem;
+        }
+    }
+
+    .container-custom {
+        width: 1340px;
+
+    }
+
+}
+
+@media (min-width: 1600px) {
+    .container-custom {
+        width: 1520px;
+
+    }
+}
+
+
+/* 
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+
+*/
