updating to tag nav and img

--- a/css/main.css
+++ b/css/main.css
@@ -32,24 +32,47 @@ a:hover {
 }
 
 /* Flyout Navigation bar*/
+.dropdown-nav_container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+.navbar_card{   
+    width: 270px;
+    margin: auto;
+}
+
+.navbar_card:hover{    
+    box-shadow: 1px 4px 5px var(--bs-body-bg);
+}
+
+
+.img-fluid_nav{
+    width: 250px;
+    height: 200px;
+}
+
+
 #navbar {
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
+    bottom: 140px;
     background-color: rgba(27, 26, 26, 0.93);
     z-index: 4;
 }
+
 
 .dropdown-nav_closeNavBtn {
     color: #a5a4a4;
     position: absolute;
     top: 20px;
-    right: 16px;   
+    right: 56px;
 }
 
-.dropdown-nav_closeNavBtn:hover{
+.dropdown-nav_closeNavBtn:hover {
     color: #ffffff;
 }
 
@@ -157,10 +180,6 @@ a:hover {
 /* Footer */
 
 
-
-
-
-
 /*  X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
     .container-custom {
@@ -200,5 +219,13 @@ a:hover {
     .steps_section-thumbnail {
         height: auto;
     }
+
+
 }
 
+@media (width: 576px) {
+    #navbar {
+        width: 100%;
+        bottom: 359px;
+    }
+}
